; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/hci/extr_ng_hci_misc.c_ng_hci_unit_clean.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/hci/extr_ng_hci_misc.c_ng_hci_unit_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32, i32 }
%struct.TYPE_11__ = type { i32 }

@NG_HCI_UNIT_COMMAND_PENDING = common dso_local global i32 0, align 4
@NG_HCI_CON_TIMEOUT_PENDING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ng_hci_unit_clean(%struct.TYPE_10__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @NG_HCI_UNIT_COMMAND_PENDING, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %15 = call i32 @ng_hci_command_untimeout(%struct.TYPE_10__* %14)
  br label %16

16:                                               ; preds = %13, %2
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 3
  %19 = call i32 @NG_BT_MBUFQ_DRAIN(i32* %18)
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @NG_HCI_BUFF_CMD_SET(i32 %22, i32 1)
  br label %24

24:                                               ; preds = %43, %16
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 2
  %27 = call i32 @LIST_EMPTY(i32* %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  br i1 %29, label %30, label %49

30:                                               ; preds = %24
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 2
  %33 = call %struct.TYPE_11__* @LIST_FIRST(i32* %32)
  store %struct.TYPE_11__* %33, %struct.TYPE_11__** %6, align 8
  %34 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @NG_HCI_CON_TIMEOUT_PENDING, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %30
  %41 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %42 = call i32 @ng_hci_con_untimeout(%struct.TYPE_11__* %41)
  br label %43

43:                                               ; preds = %40, %30
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @ng_hci_lp_discon_ind(%struct.TYPE_11__* %44, i32 %45)
  %47 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %48 = call i32 @ng_hci_free_con(%struct.TYPE_11__* %47)
  br label %24

49:                                               ; preds = %24
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* %5, align 4
  %54 = call i32 @NG_HCI_BUFF_ACL_TOTAL(i32 %52, i32 %53)
  %55 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %56 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 4
  %58 = load i32, i32* %5, align 4
  %59 = call i32 @NG_HCI_BUFF_ACL_FREE(i32 %57, i32 %58)
  %60 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %61 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  %63 = load i32, i32* %5, align 4
  %64 = call i32 @NG_HCI_BUFF_SCO_TOTAL(i32 %62, i32 %63)
  %65 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %66 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %65, i32 0, i32 1
  %67 = load i32, i32* %66, align 4
  %68 = load i32, i32* %5, align 4
  %69 = call i32 @NG_HCI_BUFF_SCO_FREE(i32 %67, i32 %68)
  %70 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %71 = call i32 @ng_hci_flush_neighbor_cache(%struct.TYPE_10__* %70)
  ret void
}

declare dso_local i32 @ng_hci_command_untimeout(%struct.TYPE_10__*) #1

declare dso_local i32 @NG_BT_MBUFQ_DRAIN(i32*) #1

declare dso_local i32 @NG_HCI_BUFF_CMD_SET(i32, i32) #1

declare dso_local i32 @LIST_EMPTY(i32*) #1

declare dso_local %struct.TYPE_11__* @LIST_FIRST(i32*) #1

declare dso_local i32 @ng_hci_con_untimeout(%struct.TYPE_11__*) #1

declare dso_local i32 @ng_hci_lp_discon_ind(%struct.TYPE_11__*, i32) #1

declare dso_local i32 @ng_hci_free_con(%struct.TYPE_11__*) #1

declare dso_local i32 @NG_HCI_BUFF_ACL_TOTAL(i32, i32) #1

declare dso_local i32 @NG_HCI_BUFF_ACL_FREE(i32, i32) #1

declare dso_local i32 @NG_HCI_BUFF_SCO_TOTAL(i32, i32) #1

declare dso_local i32 @NG_HCI_BUFF_SCO_FREE(i32, i32) #1

declare dso_local i32 @ng_hci_flush_neighbor_cache(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
